--- a/templates/updatecomment.html
+++ b/templates/updatecomment.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+{% extends "base.html" %}
+{% block content %}
 <br>
 <br>
 <br>
@@ -21,6 +23,7 @@
             {% endif %}
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Post</button>
+    <input type="submit" class="btn btn-default" name="cancel" value="Cancel">
 
           </form>
 
