--- a/templates/updatepost.html
+++ b/templates/updatepost.html
@@ -22,6 +22,7 @@
     {% endif %}
 
     <button type="submit" class="btn btn-lg btn-primary btn-block">Post</button>
+        <input type="submit" class="btn btn-default" name="cancel" value="Cancel">
 
   </form>
 {% endblock %}
